Se crean carpetas para volúmenes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "80:80"
     restart: always
     volumes:
-      - ./volumes/apache/conf:/etc/apache2/sites-enabled
+      - ./volumes/apache:/etc/apache2/sites-enabled
       - ~/Desarrollo:/var/www/html
 
   database:
