Se agrega soporte para php.ini y se sube la versión a 7.4

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,13 +1,12 @@
-FROM php:7.3-apache
+FROM php:7.4-apache
 
 RUN apt-get update \
   && apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev libwebp-dev libxpm-dev \
   && docker-php-ext-configure gd \
-    --with-freetype-dir=/usr \
-    --with-jpeg-dir=/usr \
-    --with-png-dir=/usr \
-    --with-webp-dir=/usr \
-    --with-xpm-dir=/usr \
+    --with-freetype \
+    --with-jpeg \
+    --with-webp \
+    --with-xpm \
   && docker-php-ext-install gd pdo_mysql \
   && a2enmod rewrite \
   && apt-get clean all
