--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: always
     volumes:
       - ./volumes/apache:/etc/apache2/sites-enabled
+      - ./volumes/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
       - ~/Desarrollo:/var/www/html
 
   database:
