--- a/apache-php8/Dockerfile
+++ b/apache-php8/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4-apache
+FROM php:8.0-apache
 
 RUN apt-get update \
   && apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev libwebp-dev libxpm-dev \
@@ -9,6 +9,8 @@ RUN apt-get update \
     --with-xpm \
   && docker-php-ext-install gd pdo_mysql \
   && a2enmod rewrite \
-  && apt-get clean all
+  && apt-get clean
+
+COPY conf.ini "$PHP_INI_DIR/conf.d/"
 
 CMD ["apache2-foreground"]
