Se habilita JIT

--- a/apache-php8/conf.ini
+++ b/apache-php8/conf.ini
@@ -1,2 +1,9 @@
+# Max file size limits
 post_max_size=128M
 upload_max_filesize=64M
+
+# JIT
+opcache.enable=1
+opcache.enable_cli=1
+opcache.jit=tracing
+opcache.jit_buffer_size=256M
