--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   apache-php8:
-    build: apache-php8/
+    build: build/apache-php8/
     ports:
       - "80:80"
     restart: always
@@ -11,7 +11,7 @@ services:
       - ~/Desarrollo:/var/www/html
 
   apache-php7:
-    build: apache-php7/
+    build: build/apache-php7/
     ports:
       - "8080:80"
     restart: always
@@ -40,3 +40,10 @@ services:
       - PMA_PASSWORD=password
     depends_on:
       - database
+
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    restart: always
